--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    padding: 0;
+    margin: 0;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -11,4 +16,39 @@
 }
 .chat{
     display: none;
+    width: 50%;
+    height: 50%;
+    align-items: center;
+    justify-content: center;
 }
+.chatForm{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.messages{
+    max-height: 90%;
+    overflow-y: scroll;
+    padding: 10px;
+}
+.message {
+    margin-bottom: 10px;
+}
+.message.user{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+}
+p{
+    width: 50%;
+}
+.pUser{
+    display: flex;
+    justify-content: flex-end;
+}
+.profil{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+}
+
