--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ html, body {
     max-height: 90%;
     overflow-y: scroll;
     padding: 10px;
+    background-image: url("/home/enzo/felixChat/image/bmo.jpeg");
+    background-repeat: no-repeat;
+    background-size: 919px 450px;
+    border-radius: 20px;
 }
 .message {
     margin-bottom: 10px;
@@ -40,15 +44,57 @@ html, body {
     flex-direction: column;
 }
 p{
-    width: 50%;
+
+    background-color: white;
+    border-radius: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .pUser{
+    width: auto;
+    max-width: 48%;
     display: flex;
     justify-content: flex-end;
+}
+.message.felix{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.pIA{
+    width: auto;
+    max-width: 48%;
+    display: flex;
+    justify-content: flex-start;
 }
 .profil{
     border-radius: 50%;
     height: 50px;
     width: 50px;
 }
-
+.chatForm{
+    display: flex;
+    margin-top: 10px;
+}
+.inputMessage{
+    border-radius: 25px;
+    background-color: #dbeef3;
+    border: 5px solid #4f81bd;
+    padding: 10px;
+    font-size: 1em;
+    margin-right: 10px;
+}
+.sendBtn{
+    text-decoration: none;
+    padding: 10px;
+    font-size: 1em;
+    background-color: #4f81bd;
+    border-radius: 25px;
+    border: 5px solid #dbeef3;
+}
+.sendBtn:hover{
+    padding: 10px;
+    background-color: #dbeef3;
+    border-radius: 24px;
+    border: 4px solid #4f81bd;
+}
