--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,36 @@ html, body {
 .login{
     display: none;
 }
+.inputPassword{
+    border-radius: 25px;
+    background-color: #dbeef3;
+    border: 5px solid #4f81bd;
+    padding: 10px;
+    font-size: 1em;
+    margin-top: 10px;
+}
+.inputUsername{
+    border-radius: 25px;
+    background-color: #dbeef3;
+    border: 5px solid #4f81bd;
+    padding: 10px;
+    font-size: 1em;
+}
+.loginBtn{
+    text-decoration: none;
+    padding: 10px;
+    font-size: 1em;
+    background-color: #4f81bd;
+    border-radius: 25px;
+    border: 5px solid #dbeef3;
+    margin-top: 10px;
+}
+.loginBtn:hover{
+    padding: 10px;
+    background-color: #dbeef3;
+    border-radius: 24px;
+    border: 4px solid #4f81bd;
+}
 .chat{
     display: none;
     width: 50%;
@@ -44,9 +74,9 @@ html, body {
     flex-direction: column;
 }
 p{
-
+    font-size: 1em;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 15px;
     padding-left: 10px;
     padding-right: 10px;
 }
