animation appear the response time

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ p{
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-name: anime;
+    display: none;
 }
 
 @keyframes anime{
