--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,30 @@ html, body {
     padding: 0;
     margin: 0;
 }
-
+.header{
+    height: 10vh;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+.logo{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 90vh;
     background: yellowgreen;
 }
-
+.title{
+    font-size: 50px;
+}
 .login{
     display: none;
 }
