--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ html, body {
     height: 70px;
     border-radius: 50%;
 }
+@media screen and (max-width: 600px){
+    .logo{
+        width: 50px;
+        height: 50px;
+    }
+
+}
+
+
 .container {
     display: flex;
     flex-direction: column;
@@ -160,3 +169,4 @@ p{
     50% {opacity: 0.3;}
     100% {opacity: 1;}
 }
+
