--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ html, body {
     border-radius: 24px;
     border: 4px solid #4f81bd;
 }
+
+
 .chat{
     display: none;
     width: 50%;
@@ -89,6 +91,15 @@ html, body {
     background-size: 919px 450px;
     border-radius: 20px;
 }
+@media screen and (max-width: 700px){
+    .chat{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+
+
 .message {
     margin-bottom: 10px;
 }
